--- a/Springboard Apps project - Tier 3 - Complete.ipynb
+++ b/Springboard Apps project - Tier 3 - Complete.ipynb
@@ -2201,8 +2201,18 @@
     "\n",
     "As we've seen in Professor Spiegelhalter's book, there are actually many different statistical tests, all with different assumptions. How many of these different statistical tests can you remember? How much do you remember about what the appropriate conditions are under which to use them? \n",
     "\n",
-    "Make a note of your answers to these questions, and discuss them with your mentor at your next call. \n"
+    "Make a note of your answers to these questions, and discuss them with your mentor at your next call. \n",
+    "\n",
+    "\n",
+    "Answer: I remember t-test and f-test. T-test is used when two samples of two groups are compared. F-test is used in fitting the model or comparing variance of two groups.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
